syntax = "proto3";

option csharp_namespace = "Cachy.Events";

message Ping {
  string message = 1;
}

message Pong {
  string message = 1;
}

service PingPong {
  // Returns pong when recieves ping
  rpc PingPong(Ping) returns (Pong);
}